// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Session.ts should get grantType 1`] = `"pin_code"`;

exports[`Session.ts should get subject 1`] = `"pin_code"`;

exports[`Session.ts should have all data 1`] = `
RequestLimit {
  "_backOffUntil": 2020-01-01T07:00:00.000Z,
  "_created": 2020-01-01T07:00:00.000Z,
  "_events": Array [],
  "_failedTries": 5,
  "_grantType": "pin_code",
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_subject": "test@lindorm.io",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`Session.ts should have optional data 1`] = `
RequestLimit {
  "_backOffUntil": null,
  "_created": 2020-01-01T07:00:00.000Z,
  "_events": Array [],
  "_failedTries": 1,
  "_grantType": "pin_code",
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_subject": "test@lindorm.io",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;
